--- a/src/style.css
+++ b/src/style.css
@@ -64,6 +64,108 @@ p, .font {
   width: 9%;
 }
 
+.bi-list {
+  color: white;
+}
+
+@media (max-width: 1400px) {
+  .img-size {
+    width: 522px;
+    height: 350px;
+  }
+
+  .w-40 {
+    width: 45%;
+  }
+}
+@media (max-width: 1200px) {
+  .img-size {
+    width: 436px;
+    height: 250px;
+  }
+
+  .w-40 {
+    width: 52%;
+  }
+}
+@media (max-width: 992px) {
+  .custom-none {
+    height: 50px;
+  }
+
+  .img-size {
+    width: 100%;
+    height: 300px;
+  }
+
+  .min-height {
+    min-height: 1400px;
+  }
+
+  .section-three-size {
+    min-height: 550px;
+  }
+
+  .section-four-size {
+    min-height: 370px;
+  }
+
+  .w-9 {
+    width: 15%;
+  }
+
+  .p-left {
+    padding-left: 14px !important;
+  }
+
+  .w-40 {
+    width: 65%;
+  }
+
+  .custom-m {
+    margin-top: -51px;
+  }
+}
+@media (max-width: 768px) {
+  .min-height {
+    min-height: 1550px;
+  }
+
+  .section-three-size {
+    min-height: 650px;
+  }
+
+  .w-9 {
+    width: 20%;
+  }
+
+  .w-40 {
+    width: 77%;
+  }
+
+  .custom-m {
+    margin-top: -51px;
+  }
+}
+@media (max-width: 576px) {
+  .w-40 {
+    width: 100%;
+    text-align: center;
+  }
+
+  .w-45 {
+    width: 100%;
+    text-align: center;
+  }
+
+  .min-height {
+    min-height: 1398px;
+  }
+
+  .custom-m {
+    margin-top: -51px;
+  }
+}
 /*!
  * Bootstrap  v5.2.3 (https://getbootstrap.com/)
  * Copyright 2011-2022 The Bootstrap Authors
